feat: add transaction selection mode with sum, delete, merge and charts v0.9.0

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -221,5 +221,23 @@
   "backupVersion": "إصدار النسخة الاحتياطية",
   "restored": "تم الاستعادة",
   "added": "تم الإضافة",
-  "restoreFailed": "فشل استعادة بيانات النسخة الاحتياطية"
+  "restoreFailed": "فشل استعادة بيانات النسخة الاحتياطية",
+  "selected": "المحدد",
+  "deleteSelectedConfirm": "هل أنت متأكد من حذف {{count}} معاملات محددة؟",
+  "deleteSelectedSuccess": "تم حذف المعاملات المحددة بنجاح",
+  "deleteSelectedFailed": "فشل في حذف المعاملات المحددة",
+  "mergeMinimum": "اختر معاملتين على الأقل للدمج",
+  "mergeSameType": "يمكن فقط دمج المعاملات من نفس النوع",
+  "mergeSameAccount": "يمكن فقط دمج المعاملات من نفس الحساب",
+  "mergeTransactions": "دمج المعاملات",
+  "mergeConfirm": "دمج {{count}} معاملات في معاملة واحدة بمبلغ {{amount}}؟",
+  "merge": "دمج",
+  "mergeSuccess": "تم دمج المعاملات بنجاح",
+  "mergeFailed": "فشل في دمج المعاملات",
+  "charts": "الرسوم البيانية",
+  "allTransactions": "جميع المعاملات",
+  "byAccount": "حسب الحساب",
+  "monthlyTrend": "الاتجاه الشهري",
+  "debtVsCredit": "الدين مقابل الائتمان",
+  "noDataForChart": "لا توجد بيانات للرسم البياني"
 }
