--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -221,5 +221,23 @@
   "backupVersion": "Backup-Version",
   "restored": "Wiederhergestellt",
   "added": "Hinzugefügt",
-  "restoreFailed": "Fehler beim Wiederherstellen der Backup-Daten"
+  "restoreFailed": "Fehler beim Wiederherstellen der Backup-Daten",
+  "selected": "Ausgewählt",
+  "deleteSelectedConfirm": "Möchten Sie {{count}} ausgewählte Transaktionen wirklich löschen?",
+  "deleteSelectedSuccess": "Ausgewählte Transaktionen erfolgreich gelöscht",
+  "deleteSelectedFailed": "Fehler beim Löschen der Transaktionen",
+  "mergeMinimum": "Wählen Sie mindestens 2 Transaktionen zum Zusammenführen",
+  "mergeSameType": "Nur Transaktionen gleichen Typs können zusammengeführt werden",
+  "mergeSameAccount": "Nur Transaktionen vom gleichen Konto können zusammengeführt werden",
+  "mergeTransactions": "Transaktionen zusammenführen",
+  "mergeConfirm": "{{count}} Transaktionen mit Gesamtbetrag {{amount}} zusammenführen?",
+  "merge": "Zusammenführen",
+  "mergeSuccess": "Transaktionen erfolgreich zusammengeführt",
+  "mergeFailed": "Fehler beim Zusammenführen",
+  "charts": "Diagramme",
+  "allTransactions": "Alle Transaktionen",
+  "byAccount": "Nach Konto",
+  "monthlyTrend": "Monatlicher Trend",
+  "debtVsCredit": "Schulden vs. Guthaben",
+  "noDataForChart": "Keine Daten für Diagramm"
 }
