--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -221,5 +221,23 @@
   "passwordRemovedSuccessfully": "Password removed successfully",
   "failedToRemovePassword": "Failed to remove password",
   "noPasswordSet": "No Password Set",
-  "noPasswordSetDescription": "Set up a password in the app setup"
+  "noPasswordSetDescription": "Set up a password in the app setup",
+  "selected": "Selected",
+  "deleteSelectedConfirm": "Are you sure you want to delete {{count}} selected transactions?",
+  "deleteSelectedSuccess": "Selected transactions deleted successfully",
+  "deleteSelectedFailed": "Failed to delete selected transactions",
+  "mergeMinimum": "Select at least 2 transactions to merge",
+  "mergeSameType": "Can only merge transactions of the same type (all debt or all credit)",
+  "mergeSameAccount": "Can only merge transactions from the same account",
+  "mergeTransactions": "Merge Transactions",
+  "mergeConfirm": "Merge {{count}} transactions into one with total amount {{amount}}?",
+  "merge": "Merge",
+  "mergeSuccess": "Transactions merged successfully",
+  "mergeFailed": "Failed to merge transactions",
+  "charts": "Charts",
+  "allTransactions": "All Transactions",
+  "byAccount": "By Account",
+  "monthlyTrend": "Monthly Trend",
+  "debtVsCredit": "Debt vs Credit",
+  "noDataForChart": "No data available for chart"
 }
