--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -221,5 +221,23 @@
   "backupVersion": "Versión de copia de seguridad",
   "restored": "Restaurado",
   "added": "Agregado",
-  "restoreFailed": "Error al restaurar los datos de copia de seguridad"
+  "restoreFailed": "Error al restaurar los datos de copia de seguridad",
+  "selected": "Seleccionado",
+  "deleteSelectedConfirm": "¿Estás seguro de eliminar {{count}} transacciones seleccionadas?",
+  "deleteSelectedSuccess": "Transacciones eliminadas correctamente",
+  "deleteSelectedFailed": "Error al eliminar transacciones",
+  "mergeMinimum": "Selecciona al menos 2 transacciones para fusionar",
+  "mergeSameType": "Solo se pueden fusionar transacciones del mismo tipo",
+  "mergeSameAccount": "Solo se pueden fusionar transacciones de la misma cuenta",
+  "mergeTransactions": "Fusionar Transacciones",
+  "mergeConfirm": "¿Fusionar {{count}} transacciones con monto total {{amount}}?",
+  "merge": "Fusionar",
+  "mergeSuccess": "Transacciones fusionadas correctamente",
+  "mergeFailed": "Error al fusionar transacciones",
+  "charts": "Gráficos",
+  "allTransactions": "Todas las Transacciones",
+  "byAccount": "Por Cuenta",
+  "monthlyTrend": "Tendencia Mensual",
+  "debtVsCredit": "Deuda vs Crédito",
+  "noDataForChart": "Sin datos para el gráfico"
 }
