--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -221,5 +221,23 @@
   "backupVersion": "نسخه پشتیبان",
   "restored": "بازیابی شد",
   "added": "اضافه شد",
-  "restoreFailed": "خطا در بازیابی داده‌های پشتیبان"
+  "restoreFailed": "خطا در بازیابی داده‌های پشتیبان",
+  "selected": "انتخاب شده",
+  "deleteSelectedConfirm": "آیا از حذف {{count}} تراکنش انتخابی اطمینان دارید؟",
+  "deleteSelectedSuccess": "تراکنش‌های انتخابی با موفقیت حذف شدند",
+  "deleteSelectedFailed": "حذف تراکنش‌ها با خطا مواجه شد",
+  "mergeMinimum": "حداقل ۲ تراکنش برای ادغام انتخاب کنید",
+  "mergeSameType": "فقط تراکنش‌های همنوع قابل ادغام هستند",
+  "mergeSameAccount": "فقط تراکنش‌های یک حساب قابل ادغام هستند",
+  "mergeTransactions": "ادغام تراکنش‌ها",
+  "mergeConfirm": "ادغام {{count}} تراکنش با مجموع {{amount}}؟",
+  "merge": "ادغام",
+  "mergeSuccess": "تراکنش‌ها با موفقیت ادغام شدند",
+  "mergeFailed": "ادغام تراکنش‌ها با خطا مواجه شد",
+  "charts": "نمودارها",
+  "allTransactions": "همه تراکنش‌ها",
+  "byAccount": "بر اساس حساب",
+  "monthlyTrend": "روند ماهانه",
+  "debtVsCredit": "بدهی در مقابل طلب",
+  "noDataForChart": "داده‌ای برای نمودار وجود ندارد"
 }
