--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -221,5 +221,23 @@
   "backupVersion": "Version de sauvegarde",
   "restored": "Restauré",
   "added": "Ajouté",
-  "restoreFailed": "Échec de la restauration des données de sauvegarde"
+  "restoreFailed": "Échec de la restauration des données de sauvegarde",
+  "selected": "Sélectionné",
+  "deleteSelectedConfirm": "Êtes-vous sûr de supprimer {{count}} transactions sélectionnées?",
+  "deleteSelectedSuccess": "Transactions supprimées avec succès",
+  "deleteSelectedFailed": "Échec de la suppression des transactions",
+  "mergeMinimum": "Sélectionnez au moins 2 transactions à fusionner",
+  "mergeSameType": "Seules les transactions du même type peuvent être fusionnées",
+  "mergeSameAccount": "Seules les transactions du même compte peuvent être fusionnées",
+  "mergeTransactions": "Fusionner les Transactions",
+  "mergeConfirm": "Fusionner {{count}} transactions avec un montant total de {{amount}}?",
+  "merge": "Fusionner",
+  "mergeSuccess": "Transactions fusionnées avec succès",
+  "mergeFailed": "Échec de la fusion des transactions",
+  "charts": "Graphiques",
+  "allTransactions": "Toutes les Transactions",
+  "byAccount": "Par Compte",
+  "monthlyTrend": "Tendance Mensuelle",
+  "debtVsCredit": "Dette vs Crédit",
+  "noDataForChart": "Pas de données pour le graphique"
 }
