--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -221,5 +221,23 @@
   "backupVersion": "Versi Cadangan",
   "restored": "Dipulihkan",
   "added": "Ditambahkan",
-  "restoreFailed": "Gagal memulihkan data cadangan"
+  "restoreFailed": "Gagal memulihkan data cadangan",
+  "selected": "Dipilih",
+  "deleteSelectedConfirm": "Yakin ingin menghapus {{count}} transaksi yang dipilih?",
+  "deleteSelectedSuccess": "Transaksi berhasil dihapus",
+  "deleteSelectedFailed": "Gagal menghapus transaksi",
+  "mergeMinimum": "Pilih minimal 2 transaksi untuk digabung",
+  "mergeSameType": "Hanya bisa menggabung transaksi dengan tipe sama",
+  "mergeSameAccount": "Hanya bisa menggabung transaksi dari akun sama",
+  "mergeTransactions": "Gabung Transaksi",
+  "mergeConfirm": "Gabung {{count}} transaksi dengan total {{amount}}?",
+  "merge": "Gabung",
+  "mergeSuccess": "Transaksi berhasil digabung",
+  "mergeFailed": "Gagal menggabung transaksi",
+  "charts": "Grafik",
+  "allTransactions": "Semua Transaksi",
+  "byAccount": "Per Akun",
+  "monthlyTrend": "Tren Bulanan",
+  "debtVsCredit": "Hutang vs Piutang",
+  "noDataForChart": "Tidak ada data untuk grafik"
 }
