--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -221,5 +221,23 @@
   "backupVersion": "Versione backup",
   "restored": "Ripristinato",
   "added": "Aggiunto",
-  "restoreFailed": "Impossibile ripristinare i dati di backup"
+  "restoreFailed": "Impossibile ripristinare i dati di backup",
+  "selected": "Selezionato",
+  "deleteSelectedConfirm": "Sei sicuro di eliminare {{count}} transazioni selezionate?",
+  "deleteSelectedSuccess": "Transazioni eliminate con successo",
+  "deleteSelectedFailed": "Eliminazione transazioni fallita",
+  "mergeMinimum": "Seleziona almeno 2 transazioni da unire",
+  "mergeSameType": "Si possono unire solo transazioni dello stesso tipo",
+  "mergeSameAccount": "Si possono unire solo transazioni dello stesso conto",
+  "mergeTransactions": "Unisci Transazioni",
+  "mergeConfirm": "Unire {{count}} transazioni con importo totale {{amount}}?",
+  "merge": "Unisci",
+  "mergeSuccess": "Transazioni unite con successo",
+  "mergeFailed": "Unione transazioni fallita",
+  "charts": "Grafici",
+  "allTransactions": "Tutte le Transazioni",
+  "byAccount": "Per Conto",
+  "monthlyTrend": "Tendenza Mensile",
+  "debtVsCredit": "Debito vs Credito",
+  "noDataForChart": "Nessun dato per il grafico"
 }
