--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -221,5 +221,23 @@
   "backupVersion": "バックアップバージョン",
   "restored": "復元済み",
   "added": "追加済み",
-  "restoreFailed": "バックアップデータの復元に失敗しました"
+  "restoreFailed": "バックアップデータの復元に失敗しました",
+  "selected": "選択中",
+  "deleteSelectedConfirm": "選択した{{count}}件の取引を削除しますか？",
+  "deleteSelectedSuccess": "選択した取引を削除しました",
+  "deleteSelectedFailed": "取引の削除に失敗しました",
+  "mergeMinimum": "統合するには2件以上選択してください",
+  "mergeSameType": "同じ種類の取引のみ統合できます",
+  "mergeSameAccount": "同じアカウントの取引のみ統合できます",
+  "mergeTransactions": "取引を統合",
+  "mergeConfirm": "{{count}}件の取引を合計{{amount}}で統合しますか？",
+  "merge": "統合",
+  "mergeSuccess": "取引を統合しました",
+  "mergeFailed": "取引の統合に失敗しました",
+  "charts": "グラフ",
+  "allTransactions": "すべての取引",
+  "byAccount": "アカウント別",
+  "monthlyTrend": "月次トレンド",
+  "debtVsCredit": "借金 vs 貸付",
+  "noDataForChart": "グラフのデータがありません"
 }
