--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -221,5 +221,23 @@
   "backupVersion": "백업 버전",
   "restored": "복원됨",
   "added": "추가됨",
-  "restoreFailed": "백업 데이터 복원 실패"
+  "restoreFailed": "백업 데이터 복원 실패",
+  "selected": "선택됨",
+  "deleteSelectedConfirm": "선택한 {{count}}개의 거래를 삭제하시겠습니까?",
+  "deleteSelectedSuccess": "선택한 거래가 삭제되었습니다",
+  "deleteSelectedFailed": "거래 삭제 실패",
+  "mergeMinimum": "병합하려면 2개 이상 선택하세요",
+  "mergeSameType": "같은 유형의 거래만 병합할 수 있습니다",
+  "mergeSameAccount": "같은 계정의 거래만 병합할 수 있습니다",
+  "mergeTransactions": "거래 병합",
+  "mergeConfirm": "{{count}}개의 거래를 총 {{amount}}로 병합하시겠습니까?",
+  "merge": "병합",
+  "mergeSuccess": "거래가 병합되었습니다",
+  "mergeFailed": "거래 병합 실패",
+  "charts": "차트",
+  "allTransactions": "모든 거래",
+  "byAccount": "계정별",
+  "monthlyTrend": "월별 추이",
+  "debtVsCredit": "부채 vs 채권",
+  "noDataForChart": "차트 데이터가 없습니다"
 }
