--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -221,5 +221,23 @@
   "backupVersion": "Versão do backup",
   "restored": "Restaurado",
   "added": "Adicionado",
-  "restoreFailed": "Falha ao restaurar dados de backup"
+  "restoreFailed": "Falha ao restaurar dados de backup",
+  "selected": "Selecionado",
+  "deleteSelectedConfirm": "Tem certeza de excluir {{count}} transações selecionadas?",
+  "deleteSelectedSuccess": "Transações excluídas com sucesso",
+  "deleteSelectedFailed": "Falha ao excluir transações",
+  "mergeMinimum": "Selecione pelo menos 2 transações para mesclar",
+  "mergeSameType": "Só é possível mesclar transações do mesmo tipo",
+  "mergeSameAccount": "Só é possível mesclar transações da mesma conta",
+  "mergeTransactions": "Mesclar Transações",
+  "mergeConfirm": "Mesclar {{count}} transações com valor total {{amount}}?",
+  "merge": "Mesclar",
+  "mergeSuccess": "Transações mescladas com sucesso",
+  "mergeFailed": "Falha ao mesclar transações",
+  "charts": "Gráficos",
+  "allTransactions": "Todas as Transações",
+  "byAccount": "Por Conta",
+  "monthlyTrend": "Tendência Mensal",
+  "debtVsCredit": "Dívida vs Crédito",
+  "noDataForChart": "Sem dados para o gráfico"
 }
