--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -221,5 +221,23 @@
   "backupVersion": "Версия резервной копии",
   "restored": "Восстановлено",
   "added": "Добавлено",
-  "restoreFailed": "Не удалось восстановить данные резервной копии"
+  "restoreFailed": "Не удалось восстановить данные резервной копии",
+  "selected": "Выбрано",
+  "deleteSelectedConfirm": "Удалить {{count}} выбранных транзакций?",
+  "deleteSelectedSuccess": "Транзакции успешно удалены",
+  "deleteSelectedFailed": "Ошибка удаления транзакций",
+  "mergeMinimum": "Выберите минимум 2 транзакции для объединения",
+  "mergeSameType": "Можно объединять только транзакции одного типа",
+  "mergeSameAccount": "Можно объединять только транзакции одного счёта",
+  "mergeTransactions": "Объединить транзакции",
+  "mergeConfirm": "Объединить {{count}} транзакций на сумму {{amount}}?",
+  "merge": "Объединить",
+  "mergeSuccess": "Транзакции успешно объединены",
+  "mergeFailed": "Ошибка объединения транзакций",
+  "charts": "Графики",
+  "allTransactions": "Все транзакции",
+  "byAccount": "По счёту",
+  "monthlyTrend": "Месячный тренд",
+  "debtVsCredit": "Долг vs Кредит",
+  "noDataForChart": "Нет данных для графика"
 }
