--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -221,5 +221,23 @@
   "backupVersion": "备份版本",
   "restored": "已恢复",
   "added": "已添加",
-  "restoreFailed": "恢复备份数据失败"
+  "restoreFailed": "恢复备份数据失败",
+  "selected": "已选择",
+  "deleteSelectedConfirm": "确定删除{{count}}个选中的交易吗？",
+  "deleteSelectedSuccess": "交易删除成功",
+  "deleteSelectedFailed": "交易删除失败",
+  "mergeMinimum": "请至少选择2个交易进行合并",
+  "mergeSameType": "只能合并相同类型的交易",
+  "mergeSameAccount": "只能合并同一账户的交易",
+  "mergeTransactions": "合并交易",
+  "mergeConfirm": "合并{{count}}个交易，总金额{{amount}}？",
+  "merge": "合并",
+  "mergeSuccess": "交易合并成功",
+  "mergeFailed": "交易合并失败",
+  "charts": "图表",
+  "allTransactions": "所有交易",
+  "byAccount": "按账户",
+  "monthlyTrend": "月度趋势",
+  "debtVsCredit": "债务 vs 债权",
+  "noDataForChart": "无图表数据"
 }
