fix: use settings default currency for selection sum, fix chart legend overflow v0.9.1

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -239,5 +239,7 @@
   "byAccount": "حسب الحساب",
   "monthlyTrend": "الاتجاه الشهري",
   "debtVsCredit": "الدين مقابل الائتمان",
-  "noDataForChart": "لا توجد بيانات للرسم البياني"
+  "noDataForChart": "لا توجد بيانات للرسم البياني",
+  "creditShort": "مدين لي",
+  "debtShort": "أنا مدين"
 }
