--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -99,7 +99,7 @@
   "privacy": "隐私",
   "privacyDescription": "您的数据保留在您的设备上",
   "footerDescription": "LedgerWell 帮助您跟踪债务和信贷，具有多货币支持和完整隐私。",
-  "copyrightText": "© 2025 Sepehr Mohammady. MIT 许可证下的开源软件。",
+  "copyrightText": "© 2026 Sepehr Mohammady. MIT 许可证下的开源软件.",
   "currencyExists": "货币 {code} 已存在",
   "customCurrencyAdded": "自定义货币 {code} 添加成功",
   "customCurrencyUpdated": "自定义货币 {code} 更新成功",
