feat: add contact management system for transactions
- Added Contact type for pre-defining people/companies
- Added storage methods for CRUD operations on contacts
- Created AddContactModal component for managing contacts
- Updated AddTransactionModal to select from contacts or type manually
- Added ContactsListModal for managing all contacts from Settings
- Added contacts section in Settings screen
- Added translations for all 13 locales
- Bumped version to 0.9.4

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "الدين مقابل الائتمان",
   "noDataForChart": "لا توجد بيانات للرسم البياني",
   "creditShort": "مدين لي",
-  "debtShort": "أنا مدين"
+  "debtShort": "أنا مدين",
+  "contacts": "جهات الاتصال",
+  "manageContacts": "إدارة جهات الاتصال",
+  "manageContactsDescription": "إضافة وإدارة الأشخاص/الشركات للمعاملات",
+  "addContact": "إضافة جهة اتصال",
+  "editContact": "تعديل جهة الاتصال",
+  "contactName": "اسم جهة الاتصال",
+  "contactNamePlaceholder": "مثال: أحمد محمد، شركة ABC",
+  "contactDescription": "الوصف (اختياري)",
+  "contactDescriptionPlaceholder": "ملاحظات إضافية حول جهة الاتصال",
+  "noContacts": "لا توجد جهات اتصال بعد. أضف جهة اتصالك الأولى!",
+  "noContactsYet": "لا توجد جهات اتصال بعد",
+  "contactCreated": "تم إنشاء جهة الاتصال بنجاح",
+  "contactUpdated": "تم تحديث جهة الاتصال بنجاح",
+  "contactDeleted": "تم حذف جهة الاتصال بنجاح",
+  "contactActionFailed": "فشل في حفظ جهة الاتصال",
+  "contactDeleteFailed": "فشل في حذف جهة الاتصال",
+  "deleteContactConfirm": "هل أنت متأكد من حذف \"{{name}}\"؟",
+  "selectContact": "اختر جهة اتصال...",
+  "selectFromContacts": "اختر من جهات الاتصال",
+  "typeManually": "اكتب يدوياً",
+  "pleaseSelectOrEnterName": "الرجاء اختيار جهة اتصال أو إدخال اسم",
+  "pleaseEnterContactName": "الرجاء إدخال اسم جهة الاتصال"
 }
