--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Schulden vs. Guthaben",
   "noDataForChart": "Keine Daten für Diagramm",
   "creditShort": "Schuldet mir",
-  "debtShort": "Ich schulde"
+  "debtShort": "Ich schulde",
+  "contacts": "Kontakte",
+  "manageContacts": "Kontakte Verwalten",
+  "manageContactsDescription": "Personen/Unternehmen für Transaktionen hinzufügen und verwalten",
+  "addContact": "Kontakt Hinzufügen",
+  "editContact": "Kontakt Bearbeiten",
+  "contactName": "Kontaktname",
+  "contactNamePlaceholder": "z.B., Max Mustermann, ABC GmbH",
+  "contactDescription": "Beschreibung (Optional)",
+  "contactDescriptionPlaceholder": "Zusätzliche Notizen zu diesem Kontakt",
+  "noContacts": "Noch keine Kontakte. Fügen Sie Ihren ersten Kontakt hinzu!",
+  "noContactsYet": "Noch keine Kontakte",
+  "contactCreated": "Kontakt erfolgreich erstellt",
+  "contactUpdated": "Kontakt erfolgreich aktualisiert",
+  "contactDeleted": "Kontakt erfolgreich gelöscht",
+  "contactActionFailed": "Kontakt speichern fehlgeschlagen",
+  "contactDeleteFailed": "Kontakt löschen fehlgeschlagen",
+  "deleteContactConfirm": "Möchten Sie \"{{name}}\" wirklich löschen?",
+  "selectContact": "Kontakt auswählen...",
+  "selectFromContacts": "Aus Kontakten auswählen",
+  "typeManually": "Manuell eingeben",
+  "pleaseSelectOrEnterName": "Bitte wählen Sie einen Kontakt oder geben Sie einen Namen ein",
+  "pleaseEnterContactName": "Bitte geben Sie den Kontaktnamen ein"
 }
