--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Debt vs Credit",
   "noDataForChart": "No data available for chart",
   "creditShort": "Owes Me",
-  "debtShort": "I Owe"
+  "debtShort": "I Owe",
+  "contacts": "Contacts",
+  "manageContacts": "Manage Contacts",
+  "manageContactsDescription": "Add and manage people/companies for transactions",
+  "addContact": "Add Contact",
+  "editContact": "Edit Contact",
+  "contactName": "Contact Name",
+  "contactNamePlaceholder": "e.g., John Doe, ABC Company",
+  "contactDescription": "Description (Optional)",
+  "contactDescriptionPlaceholder": "Additional notes about this contact",
+  "noContacts": "No contacts yet. Add your first contact!",
+  "noContactsYet": "No contacts yet",
+  "contactCreated": "Contact created successfully",
+  "contactUpdated": "Contact updated successfully",
+  "contactDeleted": "Contact deleted successfully",
+  "contactActionFailed": "Failed to save contact",
+  "contactDeleteFailed": "Failed to delete contact",
+  "deleteContactConfirm": "Are you sure you want to delete \"{{name}}\"?",
+  "selectContact": "Select a contact...",
+  "selectFromContacts": "Select from contacts",
+  "typeManually": "Type manually",
+  "pleaseSelectOrEnterName": "Please select a contact or enter a name",
+  "pleaseEnterContactName": "Please enter contact name"
 }
