--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Deuda vs Crédito",
   "noDataForChart": "Sin datos para el gráfico",
   "creditShort": "Me debe",
-  "debtShort": "Yo debo"
+  "debtShort": "Yo debo",
+  "contacts": "Contactos",
+  "manageContacts": "Gestionar Contactos",
+  "manageContactsDescription": "Agregar y gestionar personas/empresas para transacciones",
+  "addContact": "Agregar Contacto",
+  "editContact": "Editar Contacto",
+  "contactName": "Nombre del Contacto",
+  "contactNamePlaceholder": "ej., Juan Pérez, Empresa ABC",
+  "contactDescription": "Descripción (Opcional)",
+  "contactDescriptionPlaceholder": "Notas adicionales sobre este contacto",
+  "noContacts": "No hay contactos aún. ¡Agrega tu primer contacto!",
+  "noContactsYet": "No hay contactos aún",
+  "contactCreated": "Contacto creado exitosamente",
+  "contactUpdated": "Contacto actualizado exitosamente",
+  "contactDeleted": "Contacto eliminado exitosamente",
+  "contactActionFailed": "Error al guardar contacto",
+  "contactDeleteFailed": "Error al eliminar contacto",
+  "deleteContactConfirm": "¿Estás seguro de eliminar \"{{name}}\"?",
+  "selectContact": "Selecciona un contacto...",
+  "selectFromContacts": "Seleccionar de contactos",
+  "typeManually": "Escribir manualmente",
+  "pleaseSelectOrEnterName": "Por favor selecciona un contacto o ingresa un nombre",
+  "pleaseEnterContactName": "Por favor ingresa el nombre del contacto"
 }
