--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "بدهی در مقابل طلب",
   "noDataForChart": "داده‌ای برای نمودار وجود ندارد",
   "creditShort": "بدهکار من",
-  "debtShort": "بدهکار هستم"
+  "debtShort": "بدهکار هستم",
+  "contacts": "مخاطبین",
+  "manageContacts": "مدیریت مخاطبین",
+  "manageContactsDescription": "اضافه و مدیریت افراد/شرکت‌ها برای تراکنش‌ها",
+  "addContact": "افزودن مخاطب",
+  "editContact": "ویرایش مخاطب",
+  "contactName": "نام مخاطب",
+  "contactNamePlaceholder": "مثال: علی احمدی، شرکت الف",
+  "contactDescription": "توضیحات (اختیاری)",
+  "contactDescriptionPlaceholder": "یادداشت‌های اضافی درباره این مخاطب",
+  "noContacts": "هنوز مخاطبی ندارید. اولین مخاطب را اضافه کنید!",
+  "noContactsYet": "هنوز مخاطبی ندارید",
+  "contactCreated": "مخاطب با موفقیت ایجاد شد",
+  "contactUpdated": "مخاطب با موفقیت به‌روز شد",
+  "contactDeleted": "مخاطب با موفقیت حذف شد",
+  "contactActionFailed": "ذخیره مخاطب ناموفق بود",
+  "contactDeleteFailed": "حذف مخاطب ناموفق بود",
+  "deleteContactConfirm": "آیا مطمئن هستید که می‌خواهید «{{name}}» را حذف کنید؟",
+  "selectContact": "یک مخاطب انتخاب کنید...",
+  "selectFromContacts": "انتخاب از مخاطبین",
+  "typeManually": "تایپ دستی",
+  "pleaseSelectOrEnterName": "لطفاً یک مخاطب انتخاب کنید یا نامی وارد کنید",
+  "pleaseEnterContactName": "لطفاً نام مخاطب را وارد کنید"
 }
