--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Dette vs Crédit",
   "noDataForChart": "Pas de données pour le graphique",
   "creditShort": "Me doit",
-  "debtShort": "Je dois"
+  "debtShort": "Je dois",
+  "contacts": "Contacts",
+  "manageContacts": "Gérer les Contacts",
+  "manageContactsDescription": "Ajouter et gérer les personnes/entreprises pour les transactions",
+  "addContact": "Ajouter un Contact",
+  "editContact": "Modifier le Contact",
+  "contactName": "Nom du Contact",
+  "contactNamePlaceholder": "ex., Jean Dupont, Entreprise ABC",
+  "contactDescription": "Description (Optionnel)",
+  "contactDescriptionPlaceholder": "Notes supplémentaires sur ce contact",
+  "noContacts": "Aucun contact. Ajoutez votre premier contact!",
+  "noContactsYet": "Aucun contact",
+  "contactCreated": "Contact créé avec succès",
+  "contactUpdated": "Contact mis à jour avec succès",
+  "contactDeleted": "Contact supprimé avec succès",
+  "contactActionFailed": "Échec de l'enregistrement du contact",
+  "contactDeleteFailed": "Échec de la suppression du contact",
+  "deleteContactConfirm": "Êtes-vous sûr de vouloir supprimer \"{{name}}\"?",
+  "selectContact": "Sélectionner un contact...",
+  "selectFromContacts": "Sélectionner parmi les contacts",
+  "typeManually": "Saisir manuellement",
+  "pleaseSelectOrEnterName": "Veuillez sélectionner un contact ou entrer un nom",
+  "pleaseEnterContactName": "Veuillez entrer le nom du contact"
 }
