--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Hutang vs Piutang",
   "noDataForChart": "Tidak ada data untuk grafik",
   "creditShort": "Hutang ke saya",
-  "debtShort": "Saya berhutang"
+  "debtShort": "Saya berhutang",
+  "contacts": "Kontak",
+  "manageContacts": "Kelola Kontak",
+  "manageContactsDescription": "Tambah dan kelola orang/perusahaan untuk transaksi",
+  "addContact": "Tambah Kontak",
+  "editContact": "Edit Kontak",
+  "contactName": "Nama Kontak",
+  "contactNamePlaceholder": "cth., Budi Santoso, PT ABC",
+  "contactDescription": "Deskripsi (Opsional)",
+  "contactDescriptionPlaceholder": "Catatan tambahan tentang kontak ini",
+  "noContacts": "Belum ada kontak. Tambahkan kontak pertama Anda!",
+  "noContactsYet": "Belum ada kontak",
+  "contactCreated": "Kontak berhasil dibuat",
+  "contactUpdated": "Kontak berhasil diperbarui",
+  "contactDeleted": "Kontak berhasil dihapus",
+  "contactActionFailed": "Gagal menyimpan kontak",
+  "contactDeleteFailed": "Gagal menghapus kontak",
+  "deleteContactConfirm": "Apakah Anda yakin ingin menghapus \"{{name}}\"?",
+  "selectContact": "Pilih kontak...",
+  "selectFromContacts": "Pilih dari kontak",
+  "typeManually": "Ketik manual",
+  "pleaseSelectOrEnterName": "Silakan pilih kontak atau masukkan nama",
+  "pleaseEnterContactName": "Silakan masukkan nama kontak"
 }
