--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Debito vs Credito",
   "noDataForChart": "Nessun dato per il grafico",
   "creditShort": "Mi deve",
-  "debtShort": "Devo"
+  "debtShort": "Devo",
+  "contacts": "Contatti",
+  "manageContacts": "Gestisci Contatti",
+  "manageContactsDescription": "Aggiungi e gestisci persone/aziende per le transazioni",
+  "addContact": "Aggiungi Contatto",
+  "editContact": "Modifica Contatto",
+  "contactName": "Nome Contatto",
+  "contactNamePlaceholder": "es., Mario Rossi, Azienda ABC",
+  "contactDescription": "Descrizione (Opzionale)",
+  "contactDescriptionPlaceholder": "Note aggiuntive su questo contatto",
+  "noContacts": "Nessun contatto. Aggiungi il tuo primo contatto!",
+  "noContactsYet": "Nessun contatto",
+  "contactCreated": "Contatto creato con successo",
+  "contactUpdated": "Contatto aggiornato con successo",
+  "contactDeleted": "Contatto eliminato con successo",
+  "contactActionFailed": "Impossibile salvare il contatto",
+  "contactDeleteFailed": "Impossibile eliminare il contatto",
+  "deleteContactConfirm": "Sei sicuro di voler eliminare \"{{name}}\"?",
+  "selectContact": "Seleziona un contatto...",
+  "selectFromContacts": "Seleziona dai contatti",
+  "typeManually": "Inserisci manualmente",
+  "pleaseSelectOrEnterName": "Seleziona un contatto o inserisci un nome",
+  "pleaseEnterContactName": "Inserisci il nome del contatto"
 }
