--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "借金 vs 貸付",
   "noDataForChart": "グラフのデータがありません",
   "creditShort": "貸し",
-  "debtShort": "借り"
+  "debtShort": "借り",
+  "contacts": "連絡先",
+  "manageContacts": "連絡先を管理",
+  "manageContactsDescription": "取引用の人物/会社を追加・管理",
+  "addContact": "連絡先を追加",
+  "editContact": "連絡先を編集",
+  "contactName": "連絡先名",
+  "contactNamePlaceholder": "例：山田太郎、ABC株式会社",
+  "contactDescription": "説明（任意）",
+  "contactDescriptionPlaceholder": "この連絡先に関する追加メモ",
+  "noContacts": "連絡先がありません。最初の連絡先を追加してください！",
+  "noContactsYet": "連絡先がありません",
+  "contactCreated": "連絡先が正常に作成されました",
+  "contactUpdated": "連絡先が正常に更新されました",
+  "contactDeleted": "連絡先が正常に削除されました",
+  "contactActionFailed": "連絡先の保存に失敗しました",
+  "contactDeleteFailed": "連絡先の削除に失敗しました",
+  "deleteContactConfirm": "「{{name}}」を削除してもよろしいですか？",
+  "selectContact": "連絡先を選択...",
+  "selectFromContacts": "連絡先から選択",
+  "typeManually": "手動入力",
+  "pleaseSelectOrEnterName": "連絡先を選択するか名前を入力してください",
+  "pleaseEnterContactName": "連絡先名を入力してください"
 }
