--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "부채 vs 채권",
   "noDataForChart": "차트 데이터가 없습니다",
   "creditShort": "받을 돈",
-  "debtShort": "갚을 돈"
+  "debtShort": "갚을 돈",
+  "contacts": "연락처",
+  "manageContacts": "연락처 관리",
+  "manageContactsDescription": "거래를 위한 사람/회사 추가 및 관리",
+  "addContact": "연락처 추가",
+  "editContact": "연락처 편집",
+  "contactName": "연락처 이름",
+  "contactNamePlaceholder": "예: 홍길동, ABC 회사",
+  "contactDescription": "설명 (선택사항)",
+  "contactDescriptionPlaceholder": "이 연락처에 대한 추가 메모",
+  "noContacts": "연락처가 없습니다. 첫 번째 연락처를 추가하세요!",
+  "noContactsYet": "연락처가 없습니다",
+  "contactCreated": "연락처가 성공적으로 생성되었습니다",
+  "contactUpdated": "연락처가 성공적으로 업데이트되었습니다",
+  "contactDeleted": "연락처가 성공적으로 삭제되었습니다",
+  "contactActionFailed": "연락처 저장 실패",
+  "contactDeleteFailed": "연락처 삭제 실패",
+  "deleteContactConfirm": "\"{{name}}\"을(를) 삭제하시겠습니까?",
+  "selectContact": "연락처 선택...",
+  "selectFromContacts": "연락처에서 선택",
+  "typeManually": "직접 입력",
+  "pleaseSelectOrEnterName": "연락처를 선택하거나 이름을 입력하세요",
+  "pleaseEnterContactName": "연락처 이름을 입력하세요"
 }
