--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Dívida vs Crédito",
   "noDataForChart": "Sem dados para o gráfico",
   "creditShort": "Me deve",
-  "debtShort": "Eu devo"
+  "debtShort": "Eu devo",
+  "contacts": "Contatos",
+  "manageContacts": "Gerenciar Contatos",
+  "manageContactsDescription": "Adicionar e gerenciar pessoas/empresas para transações",
+  "addContact": "Adicionar Contato",
+  "editContact": "Editar Contato",
+  "contactName": "Nome do Contato",
+  "contactNamePlaceholder": "ex., João Silva, Empresa ABC",
+  "contactDescription": "Descrição (Opcional)",
+  "contactDescriptionPlaceholder": "Notas adicionais sobre este contato",
+  "noContacts": "Nenhum contato ainda. Adicione seu primeiro contato!",
+  "noContactsYet": "Nenhum contato ainda",
+  "contactCreated": "Contato criado com sucesso",
+  "contactUpdated": "Contato atualizado com sucesso",
+  "contactDeleted": "Contato excluído com sucesso",
+  "contactActionFailed": "Falha ao salvar contato",
+  "contactDeleteFailed": "Falha ao excluir contato",
+  "deleteContactConfirm": "Tem certeza de que deseja excluir \"{{name}}\"?",
+  "selectContact": "Selecione um contato...",
+  "selectFromContacts": "Selecionar dos contatos",
+  "typeManually": "Digitar manualmente",
+  "pleaseSelectOrEnterName": "Por favor, selecione um contato ou digite um nome",
+  "pleaseEnterContactName": "Por favor, digite o nome do contato"
 }
