--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "Долг vs Кредит",
   "noDataForChart": "Нет данных для графика",
   "creditShort": "Мне должны",
-  "debtShort": "Я должен"
+  "debtShort": "Я должен",
+  "contacts": "Контакты",
+  "manageContacts": "Управление Контактами",
+  "manageContactsDescription": "Добавление и управление людьми/компаниями для транзакций",
+  "addContact": "Добавить Контакт",
+  "editContact": "Редактировать Контакт",
+  "contactName": "Имя Контакта",
+  "contactNamePlaceholder": "напр., Иван Иванов, ООО Компания",
+  "contactDescription": "Описание (Необязательно)",
+  "contactDescriptionPlaceholder": "Дополнительные заметки об этом контакте",
+  "noContacts": "Контактов пока нет. Добавьте первый контакт!",
+  "noContactsYet": "Контактов пока нет",
+  "contactCreated": "Контакт успешно создан",
+  "contactUpdated": "Контакт успешно обновлён",
+  "contactDeleted": "Контакт успешно удалён",
+  "contactActionFailed": "Не удалось сохранить контакт",
+  "contactDeleteFailed": "Не удалось удалить контакт",
+  "deleteContactConfirm": "Вы уверены, что хотите удалить \"{{name}}\"?",
+  "selectContact": "Выберите контакт...",
+  "selectFromContacts": "Выбрать из контактов",
+  "typeManually": "Ввести вручную",
+  "pleaseSelectOrEnterName": "Пожалуйста, выберите контакт или введите имя",
+  "pleaseEnterContactName": "Пожалуйста, введите имя контакта"
 }
