--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -241,5 +241,27 @@
   "debtVsCredit": "债务 vs 债权",
   "noDataForChart": "无图表数据",
   "creditShort": "应收",
-  "debtShort": "应付"
+  "debtShort": "应付",
+  "contacts": "联系人",
+  "manageContacts": "管理联系人",
+  "manageContactsDescription": "添加和管理交易的人员/公司",
+  "addContact": "添加联系人",
+  "editContact": "编辑联系人",
+  "contactName": "联系人名称",
+  "contactNamePlaceholder": "例如：张三、ABC公司",
+  "contactDescription": "描述（可选）",
+  "contactDescriptionPlaceholder": "关于此联系人的其他备注",
+  "noContacts": "暂无联系人。添加您的第一个联系人！",
+  "noContactsYet": "暂无联系人",
+  "contactCreated": "联系人创建成功",
+  "contactUpdated": "联系人更新成功",
+  "contactDeleted": "联系人删除成功",
+  "contactActionFailed": "保存联系人失败",
+  "contactDeleteFailed": "删除联系人失败",
+  "deleteContactConfirm": "您确定要删除\"{{name}}\"吗？",
+  "selectContact": "选择联系人...",
+  "selectFromContacts": "从联系人中选择",
+  "typeManually": "手动输入",
+  "pleaseSelectOrEnterName": "请选择联系人或输入名称",
+  "pleaseEnterContactName": "请输入联系人名称"
 }
